wip on moving to correct aria roles, fix long standing tab jump bug

--- a/templates/components/tabs/_base.scss
+++ b/templates/components/tabs/_base.scss
@@ -17,7 +17,7 @@
       }
     }
 
-    .tab {
+    [role="tabpanel"] {
       margin: 0;
       padding: 0;
 
@@ -154,7 +154,7 @@
       background-color: $highlight;
     }
 
-    .tab {
+    [role="tabpanel"] {
       @include rem(margin-top, -70px);
       @include rem(padding-top, 70px);
       margin-left: auto;
@@ -191,7 +191,7 @@
         background-color: transparent;
       }
 
-      .tab {
+      [role="tabpanel"] {
         @include rem(margin-top, -76px);
         @include rem(padding-top, 76px);
       }
@@ -225,7 +225,7 @@
         background-color: transparent;
       }
 
-      .tab {
+      [role="tabpanel"] {
         @include rem(margin-top, -76px);
         @include rem(padding-top, 76px);
       }
@@ -260,7 +260,7 @@
         @include rem(padding, 15px);
       }
 
-      .tab {
+      [role="tabpanel"] {
         @include rem(margin-top, -55px);
         @include rem(padding-top, 55px);
       }
@@ -303,7 +303,7 @@
       }
     }
 
-    .tab {
+    [role="tabpanel"] {
       @include padding-leader(1);
       @include padding-trailer(0);
       @include rem(padding-left, 25px);
@@ -321,7 +321,7 @@
     @extend .tabbed-nav;
     @extend .thin;
 
-    .tab {
+    [role="tabpanel"] {
       @extend %clearfix;
       background-color: $white;
     }
